# blink

./: .cvsignore  .gitignore  Activity.hs  Blink.hs  Blinker.hs  Client.hs  Command.hs  Connect.hs  Globals.hs  Key.hs  KeyMap.hs  Keys.hs  LICENSE  Loadavg.hs  Mail.hs  Makefile  Pinger.hsc  Purple.hs  README  Segment.hs  Server.hs  State.hs  Time.hs  Util.hs  activity.c  activity.h  blink.c  blink.cabal  blink1.c  blink1.h  blink1c.c  blink1d.c  blinkd.c  blinkd.hs  blinkh.hs  blinkhd.hs  command.c  command.h  control.c  control.h  (+23 more)
hs/: LICENSE  blink1.cabal  blink1.hs
hs/Data/Fixed/: Prec.hs
hs/System/Hardware/: Blink1.hs
hs/System/Hardware/Blink1/: Class.hs  Dummy.hs  Linux.hs  Mux.hs  Types.hs  USB.hs
hs/System/Linux/: HIDRaw.hsc
hs/blink1/: Main.hs
