name: blink
version: 0
Build-Type:	Simple
Cabal-Version:	>= 1.2

executable blinkhd
  main-is: blinkhd.hs
  build-depends: base,
    directory,
    linux-inotify,
    blink1
  other-modules:
        Activity
        Blinker
        Client
        Command
        Key
        Loadavg
        Mail
        Pinger
        Purple
        Segment
        Server
        State
        Time
        Util
  include-dirs: ../pinger

executable blinkh
  main-is: blinkh.hs
  build-depends: base,
    binary,
    bytestring,
    containers,
    network,
    time,
    unix,
    blink1
  other-modules:
        Activity
        Blinker
        Command
        Key
        Segment
        Time
        Util

