name: blink
version: 0
Build-Type:	Simple
Cabal-Version:	>= 1.10

executable blinkhd
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: blinkhd.hs
  build-depends: base,
    binary,
    bytestring,
    containers,
    directory,
    linux-inotify,
    network,
    time,
    unix,
    blink1
  other-modules:
        Activity
        Blinker
        Client
        Command
        Key
        Loadavg
        Mail
        Pinger
        Purple
        Segment
        Server
        State
        Time
        Util
  include-dirs: ../pinger

executable blinkh
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: blinkh.hs
  build-depends: base,
    binary,
    bytestring,
    containers,
    network,
    time,
    unix,
    blink1
  other-modules:
        Activity
        Blinker
        Command
        Key
        Segment
        Time
        Util

