Name:		blink1
Version:	0.5
Author:		Dylan Simon
Maintainer:     dylan@dylex.net
License:        BSD3
License-File:	LICENSE
Synopsis:	Control library for blink(1) LED from ThingM
Description:    Provides an interface to the ThingM blink(1) LED <http://thingm.com/products/blink-1.html> similar to (but not dependent on) <http://github.com/todbot/blink1> via Linux hidraw or the libusb-based usb package.
Category:	Hardware
Build-Type:	Simple
Cabal-Version:	>= 1.10
tested-with:	GHC == 7.8.3, GHC == 7.10.3

Source-Repository head
    Type:	git
    Location:   http://github.com/dylex/blink

Flag usb
    Description:        Enable libusb-based usb backend

Library
    Build-Depends:	base == 4.*, binary
    Exposed-Modules:    System.Hardware.Blink1, System.Hardware.Blink1.Types, System.Hardware.Blink1.Class, System.Hardware.Blink1.Dummy, Data.Fixed.Prec
    default-language: Haskell2010
    ghc-options: -Wall
    if os(linux)
        Build-Depends:	unix
        Exposed-Modules: System.Hardware.Blink1.Linux, System.Linux.HIDRaw
    if flag(usb)
        Build-Depends:  usb >= 1.3, vector, text, bytestring
        Exposed-Modules: System.Hardware.Blink1.USB

Executable blink1
    main-is: blink1.hs
    build-depends: base, binary, blink1
    default-language: Haskell2010
    ghc-options: -Wall
    if os(linux)
        build-depends: unix
        CPP-options: -DUSE_LINUX
    if flag(usb)
        Build-Depends: usb >= 1.3, vector, text, bytestring
        CPP-options: -DUSE_USB
